# ROCR-Runtime

HSA-examples/: CMakeLists.txt  README.md  dezhi.sh  utility.hpp
HSA-examples/cmake/: hsa_support.cmake
HSA-examples/dispatch_multi_gpu/: CLI11.hpp  CMakeLists.txt  README.md  add_one_kernel.cpp  dispatch_multi_gpu.cpp
HSA-examples/iterate_agents/: CMakeLists.txt  iterate_agents.cpp
hsaSupport/: build.sh  hsa_supported.c
runtime/hsa-runtime/core/runtime/: isa.cpp
